--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js"
-  }
+  },
+  "homepage": "http://bjdixon.github.io/weather-app/"
 }
